--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ author: Gareth Reese
 # edit this section with your information
 # biomadeira.github.io - all contents run on /vitae/
 # for a normal use at the base of the server change it to "/"
-baseurl: /vitae/
+baseurl: /
 title: Gareth Reese's Resume
 name: Gareth Reese
 email: gazreese@gmail.com
