Remove website for the time being

--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@ title: Gareth Reese's Resume
 name: Gareth Reese
 email: gazreese@gmail.com
 email_full: mailto:gazreese@gmail.com
-website: gazreese.com
-website_full: https://gazreese.com
+# website: gazreese.com
+# website_full: https://gazreese.com
 github: gazreese
 
 # [ ] need to disable
