Updated favicon etc

--- a/_config.yml
+++ b/_config.yml
@@ -18,15 +18,15 @@ title: Gareth Reese's Resume
 name: Gareth Reese
 email: gazreese@gmail.com
 email_full: mailto:gazreese@gmail.com
-# website: gazreese.com
-# website_full: https://gazreese.com
+website: cv.gazreese.com
+website_full: https://cv.gazreese.com
 github: gazreese
 
 # [ ] need to disable
 twitter: twitter
 
-# tel: +44 (0)7717 006958
-# tel_full: tel:+447717006958
+tel: +44 (0)7717 006958
+tel_full: tel:+447717006958
 google_maps: 'https://www.google.co.uk/maps/@53.4168798,-2.0778016,17z'
 
 # [ ] need to disable
