Some more updates

--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,12 @@ title: Gareth Reese's Resume
 name: Gareth Reese
 email: gazreese@gmail.com
 email_full: mailto:gazreese@gmail.com
-website: cv.gazreese.com
-website_full: https://cv.gazreese.com
+website: gazreese.github.io
+website_full: https://gazreese.github.io
 github: gazreese
 
 # [ ] need to disable
-twitter: twitter
+twitter: gazreese
 
 tel: +44 (0)7717 006958
 tel_full: tel:+447717006958
